This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - make custom variables from show_custom_vars clickable
          - add eventhandler search option
          - Panorama View:
            - add hide label checkbox for pnp panel
            - fix sending reschedule commands
          - Reports:
            - keep reports during updates (#546)

2.04     Thu Nov 12 10:32:27 CET 2015
          - add json export to process info page
          - fix problem with removing reports when trying to save files on a full disk.
          - fix "show link" not displaying the hostname
          - support host custom variables in services via show_custom_vars
          - Config Tool:
            - add reference clone selection page
          - Panorama View:
            - add clean dashboards button in dashboard management all tab
            - add cli command to clean dashboards
            - add scrollbars for large maps
            - add action menus for dashboards
            - add file upload for background images
            - add file upload for static images
            - fix grid panels not restoring column width
          - Reports:
            - add quarterly and half year reports
            - change pdf converter to phantomjs
            - fix sending excel reports from web

2.02     Wed Sep 30 17:38:30 CEST 2015
          - show eventhandler name on extinfo page if available
          - limit json exports to accounts with configuration information role
          - clear process info cache after sending commands
          - fix weekly cron jobs on Tuesdays (Alexandre Anriot, #525)
          - Panorama View:
            - make text label background size configurable
            - add extra_fonts option to extend the list of available fonts
            - add show border option for services and hosts panel
            - fix list of public dashboards for admin users
            - fix label zIndex positioning