@@ -5,6 +5,7 @@ next:
           - add eventhandler search option
           - Panorama View:
             - add hide label checkbox for pnp panel
+            - add new appearance type 'label only'
             - fix sending reschedule commands
           - Reports:
             - keep reports during updates (#546)
